2005-10-07  Frank Lichtenheld  <djpig@debian.org>

	* scripts/controllib.pl:
	(checkversion) add generic check for valid version numbers
	(checkpackagename) add generic check for valid package
	names
	(readmd5sum) add generic function to extract md5sum from
	md5sum program output
	(setsourcepackage) call checkpackagename on new value
	* scripts/dpkg-source.pl: Use the new checks added to
	controllib to ensure validity of version and packagename
	on build, too. Previously this was only done on
	unpack.

	* scripts/dpkg-source.pl: Test on build if directories
	added by diff already exist with other type in the original
	source since we already tested that on unpack.

	* scripts/dpkg-source.pl (addfile): Test if files are added
	twice. Should not happen but as we error out on unpack
	better make sure it doesn't.

2005-10-04  Frank Lichtenheld  <djpig@debian.org>
 
	* scripts/dpkg-source.pl: Check build relation
	fields for correctness before putting them into
	the .dsc when building. This also normalizes the
	fields.
 
2005-10-03  Matt Zimmerman  <mdz@debian.org>,
	    Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-source.pl: If gpg is installed, check
	the signature of the .dsc file before unpacking.
	Allow the unpacking to suceed if the .dsc is unsigned
	but error out if the signature is bad. If gpg exits
	with a code >2 (e.g. missing key), show the user the gpg
	output but continue.

2005-10-03  Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-source.pl: Try to chown files extracted from
	a tar file to the uid and gid of the user. This should make
	dpkg-source -x safer to use as root. Also create the temporary
	directory mode 0700 to not allow anyone exploiting races
	between the extraction and the chown.

	* scripts/dpkg-gencontrol.pl: Warn about illegal architecture
	strings. This will warn e.g. about comma-separated architecture
	lists.
	* scripts/dpkg-source.pl: Also check architecture strings and
	error out if we find illegal ones.
