@@ -20,6 +20,8 @@ dpkg (1.13.12~) unstable; urgency=low
   * Check for illegal architecture strings in dpkg-gencontrol and
     dpkg-source. dpkg-gencontrol will only issue a warning while
     dpkg-source will error out. Closes: #96920
+  * Add support "package types" to dpkg-shlibdeps. Patch by
+    Joey Hess. Closes: #345475
 
  --
 
