@@ -1,3 +1,15 @@
+2006-01-18  Joey Hess  <joeyh@debian.org>
+
+	* scripts/dpkg-shlibdeps: Add possibility to
+	specify a package type in the shlibs file
+	and add a -t switch to dpkg-shlibdeps to
+	specify the wanted type. Entries without
+	package type will have type 'deb' and will
+	serve as fallback if no entry with the
+	correct type is found
+	* man/C/dpkg-source.1: Document new -t
+	switch for dpkg-shlibdeps
+
 2005-10-07  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/controllib.pl:
